--- a/crontendCrud/src/app/table/table.component.html
+++ b/crontendCrud/src/app/table/table.component.html
@@ -12,4 +12,8 @@
         <td>Add new employee:</td><td><input type="text" value="Name" id="name"></td><td><input type="text" value="Surname" id="surname"></td>
     </tr>
 </table>
-
+<hr><br>
+<div>
+    <h2>Add new employee</h2>
+    <label>name: </label><input type="text" [(ngModels)]="">
+</div>
